addons/falkordb/e2e/tests/20-acl-propagation/cluster.yaml
apiVersion: apps.kubeblocks.io/v1
kind: Cluster
metadata:
  name: fdb-acl
spec:
  terminationPolicy: WipeOut
  clusterDef: falkordb
  topology: replication
  componentSpecs:
    - name: falkordb
      disableExporter: true
      replicas: 2
      resources:
        limits:
          cpu: '0.5'
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 512Mi
      volumeClaimTemplates:
        - name: data
          spec:
            accessModes:
              - ReadWriteOnce
            resources:
              requests:
                storage: 1Gi
    - name: falkordb-sent
      replicas: 3
      resources:
        limits:
          cpu: '0.5'
          memory: 256Mi
        requests:
          cpu: 50m
          memory: 256Mi
      volumeClaimTemplates:
        - name: data
          spec:
            accessModes:
              - ReadWriteOnce
            resources:
              requests:
                storage: 1Gi
