addons/falkordb/e2e/tests/20-acl-propagation/scale-out.yaml
apiVersion: operations.kubeblocks.io/v1alpha1
kind: OpsRequest
metadata:
  name: fdb-acl-scale-out
spec:
  clusterName: fdb-acl
  type: HorizontalScaling
  horizontalScaling:
    - componentName: falkordb
      scaleOut:
        replicaChanges: 1
